# mediate

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mediate/: __init__.py  cli.py  converters.py  disposal.py  exiftool.py  macmeta.py  probe.py  renamer.py  scanner.py  validators.py
tests/: test_plumbing.py  test_renamer.py  test_scanner.py
